--- a/scss/custom/_main.scss
+++ b/scss/custom/_main.scss
@@ -1,38 +1,4 @@
 body {
-  text-align: center;
-  > #container {
-    text-align:left;
-    margin:0 auto;
-    width:500px;
-  }
-
-  div{
-    border: thin red solid;
-    color: red;
-    font-size: 24px;
-  }
-}
-
-
-header {
-  h1 {
-    font-size:26px; margin-bottom:26px;
-  }
-}
-div[role="main"] {
-  border:3px solid blue;
-  padding: 20px;
-  margin-bottom:25px; 
-  
-  ul {
-    padding-top:14px;
-  }
-  li {
-    color: red;
-    margin-bottom:12px;
-  }
-}
-
-button {
-
+  padding-top: 50px;
+  padding-bottom: 20px;
 }
