--- a/scss/custom/_variables.scss
+++ b/scss/custom/_variables.scss
@@ -1,2 +1,13 @@
-$font-stack:    Helvetica, sans-serif;
-$hTagBlue: #4080FF;
+//Colors
+$blue: #4080FF;
+
+
+//Fonts
+$fontBody: Helvetica, sans-serif;
+
+//Freight Fonts
+$iqfont-light: 'FreightLight', Helvetica, sans-serif;
+$iqFontReg: 'FreightReg', Helvetica, sans-serif;
+$iqFontMed: 'FreightMed', Helvetica, sans-serif;
+$iqFontSemi: 'FreightSemi', Helvetica, sans-serif;
+$iqFontBold: 'FreightBold', Helvetica, sans-serif;
