home structure progress update

--- a/scss/_bootstrap.scss
+++ b/scss/_bootstrap.scss
@@ -54,9 +54,13 @@
 // Utility classes
 @import "bootstrap/utilities";
 @import "bootstrap/responsive-utilities";
+@import "bootstrap/ie10viewport";
 
 
 
 
-// Custom Imports
-@import "custom/main";
+
+
+
+
+
