fb iq mobile responsive begun

--- a/scss/custom/_variables.scss
+++ b/scss/custom/_variables.scss
@@ -1,12 +1,13 @@
 //Colors
-$blue: #4080FF;
+$hTagBlue: #4080FF;
+$copyDark: #607D80;
 
 
 //Fonts
 $fontBody: Helvetica, sans-serif;
 
 //Freight Fonts
-$iqfont-light: 'FreightLight', Helvetica, sans-serif;
+$iqFontLight: 'FreightLight', Helvetica, sans-serif;
 $iqFontReg: 'FreightReg', Helvetica, sans-serif;
 $iqFontMed: 'FreightMed', Helvetica, sans-serif;
 $iqFontSemi: 'FreightSemi', Helvetica, sans-serif;
