--- a/scss/custom/_main.scss
+++ b/scss/custom/_main.scss
@@ -1,21 +1,3 @@
-//Colors
-$hTagBlue: #4080FF;
-$copyDark: #607D80;
-
-
-//Fonts
-$fontBody: Helvetica, sans-serif;
-
-//Freight Fonts
-$iqFontLight: 'FreightLight', Helvetica, sans-serif;
-$iqFontReg: 'FreightReg', Helvetica, sans-serif;
-$iqFontMed: 'FreightMed', Helvetica, sans-serif;
-$iqFontSemi: 'FreightSemi', Helvetica, sans-serif;
-$iqFontBold: 'FreightBold', Helvetica, sans-serif;
-
-
-
-
 body {
 
   h1{
@@ -58,8 +40,19 @@ nav{
       font-family: $iqFontLight;
       font-size: 24px;
     }
+  } 
+
+  .dot-bg-ctnr{
+    background: transparent url("../images/home-dot-bg.png") repeat-y  center;
+    width: 369px;
+    height: 100%;
+    min-height: 750px;
+    right: 80px;
+    float: right;
   }
 }
+
+
 
 .rotator{
   .section{
@@ -117,7 +110,6 @@ nav{
 }
 
 
-
 //*Home Page Content Section
 .home-content{
   padding: 75px 0px;
@@ -144,5 +136,78 @@ nav{
     // padding-top: 0;
   }
 }
+
+
+
+//MOBILE
+@media only screen and (max-width: 767px) and (min-width: 1px){
+  body{
+    h1{
+      font-size: 46px;
+      line-height: 44px;
+    }
+    .section{
+      padding: 0;
+      min-height: auto;
+
+      .container{
+        padding-top: 0px;
+
+         h2{
+            font-size: 46px;
+            line-height: 42px;
+          }
+          
+          p{
+            color: white;
+            font-family: $iqFontLight;
+            font-size: 18px !important;
+            padding-top: 10px !important;
+          }
+        }
+        .dot-bg-ctnr{
+          display: none;
+        }
+      }
+      .rotator .section .container p{
+        padding-top: 10px;
+      }
+    }
+
+
+
+
+
+
+    .home-content{
+      padding: 25px 0px;
+
+      h2{
+        color: $hTagBlue;
+        font-size: 46px;
+        letter-spacing: -.01em;
+        line-height: auto;
+      }
+
+      .col-md-7{
+        margin-top: 10px;
+        padding: 10px 10px;
+        p{
+          padding-top: 0;
+        }
+      }
+      p{
+        color: $copyDark;
+        font-family: $iqFontLight;
+        color: #607D80;
+        font-size: 24px;
+        // padding-top: 0;
+      }
+    }
+}
+
+
+
+
 
 
