responsive scss added / hamburger nav begun

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -6,6 +6,9 @@
 @import "custom/_variables.scss";
 
 // Custom Imports
+@import "custom/_mobilenav.scss";
 @import "custom/_main.scss";
+@import "custom/_responsive.scss";
+
 
 
