--- a/scss/custom/_mobilenav.scss
+++ b/scss/custom/_mobilenav.scss
@@ -9,8 +9,6 @@
   margin: 0;
   padding: 0;
   
-  /* make it look decent enough */
-  background: #232323;
   color: #cdcdcd;
   font-family: "Avenir Next", "Avenir", sans-serif;
 
@@ -27,9 +25,9 @@
 
   #menuToggle{
     display: block;
-    position: relative;
-    top: 50px;
-    left: 50px;
+    position: absolute;
+    top: 18px;
+    right: 30px;
     
     z-index: 1;
     
@@ -59,11 +57,11 @@
   {
     display: block;
     width: 33px;
-    height: 4px;
-    margin-bottom: 5px;
+    height: 2px;
+    margin-bottom: 8px;
     position: relative;
     
-    background: #cdcdcd;
+    background: $fbBlue;
     border-radius: 3px;
     
     z-index: 1;
