--- a/scss/custom/_mobilenav.scss
+++ b/scss/custom/_mobilenav.scss
@@ -1,152 +1,104 @@
-/*
- *
- * If you are thinking of using this in
- * production code, beware of the browser
- * prefixes.
- */
+$blackColor: #020304;
 
-.mobile-nav{
-  margin: 0;
-  padding: 0;
-  
-  color: #cdcdcd;
-  font-family: "Avenir Next", "Avenir", sans-serif;
+.mobile-nav {  
+    input + label {
+      position: fixed;
+      top: 25px;
+      right: 15px;
+      height: 20px;
+      width: 32px; 
+      z-index: 5;
+      span {
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        top: 50%;
+        margin-top: -1px;
+        left: 0;
+        display: block;
+        background: $fbBlue;
+        transition: .5s;
+      }
+      span:first-child {
+        top: 0px; 
+      }
+      span:last-child {
+        top: 20px; 
 
-  a{
-    text-decoration: none;
-    color: #232323;    
-    transition: color 0.3s ease;
-    border: thin red solid;
-  }
+      }      
+    }
+    label:hover {
+      cursor: pointer;
+    }
+    input[type="checkbox"]{
+      position: absolute;
+      top: -100px;
+    }
 
-  a:hover{
-    color: tomato;
-  }
-
-  #menuToggle{
-    display: block;
-    position: absolute;
-    top: 18px;
-    right: 30px;
-    
-    z-index: 1;
-    
-    -webkit-user-select: none;
-    user-select: none;
-  }
-
-  #menuToggle input{
-    display: block;
-    width: 40px;
-    height: 32px;
-    position: absolute;
-    top: -7px;
-    left: -5px;
-    cursor: pointer;
-    
-    opacity: 0; /* hide this */
-    z-index: 2; /* and place it over the hamburger */
-    
-    -webkit-touch-callout: none;
-  }
-
-  /*
-   * Just a quick hamburger
-   */
-  #menuToggle span
-  {
-    display: block;
-    width: 33px;
-    height: 2px;
-    margin-bottom: 8px;
-    position: relative;
-    
-    background: $fbBlue;
-    border-radius: 3px;
-    
-    z-index: 1;
-    
-    transform-origin: 4px 0px;
-    
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                opacity 0.55s ease;
-  }
-
-  #menuToggle span:first-child
-  {
-    transform-origin: 0% 0%;
-  }
-
-  #menuToggle span:nth-last-child(2)
-  {
-    transform-origin: 0% 100%;
-  }
-
-  /* 
-   * Transform all the slices of hamburger
-   * into a crossmark.
-   */
-  #menuToggle input:checked ~ span
-  {
-    opacity: 1;
-    transform: rotate(45deg) translate(-2px, -1px);
-    background: #232323;
-  }
-
-  /*
-   * But let's hide the middle one.
-   */
-  #menuToggle input:checked ~ span:nth-last-child(3)
-  {
-    opacity: 0;
-    transform: rotate(0deg) scale(0.2, 0.2);
-  }
-
-  /*
-   * Ohyeah and the last one should go the other direction
-   */
-  #menuToggle input:checked ~ span:nth-last-child(2)
-  {
-    opacity: 1;
-    transform: rotate(-45deg) translate(0, -1px);
-  }
-
-  /*
-   * Make this absolute positioned
-   * at the top left of the screen
-   */
-  #menu
-  {
-    position: absolute;
-    width: 300px;
-    margin: -100px 0 0 -50px;
-    padding: 50px;
-    padding-top: 125px;
-    
-    background: #ededed;
-    list-style-type: none;
-    -webkit-font-smoothing: antialiased;
-    /* to stop flickering of text in safari */
-    
-    transform-origin: 0% 0%;
-    transform: translate(-100%, 0);
-    
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-  }
-
-  #menu li
-  {
-    padding: 10px 0;
-    font-size: 22px;
-  }
-
-  /*
-   * And let's fade it in from the left
-   */
-  #menuToggle input:checked ~ ul
-  {
-    transform: scale(1.0, 1.0);
-    opacity: 1;
-  }
+    input:checked + label { 
+      span {
+        opacity: 0;      
+      }
+      span:first-child {
+        opacity: 1;
+        transform: rotate(45deg) translate(0, 0);
+        background: #232323;
+        top: 8px;
+      }
+      span:last-child {
+        opacity: 1;
+        transform: rotate(-45deg) translate(0, 0);
+        background: #232323;
+        top: 8px;
+      }
+    }
+    input ~ nav {
+      background: rgba(255, 255, 255, 0.8);
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100px;
+      z-index: 3;
+      padding-top: 0px;
+      height: 70px;
+      transition: .5s;
+      transition-delay: .2s;
+      overflow: hidden;
+      > ul {
+        text-align: right;
+        position: absolute;
+        top: 30%;
+        // left: 20%;
+        right: 10%;
+        list-style-type: none;
+        > li {
+          opacity: 0;
+          transition: .5s;
+          transition-delay: 0s;
+          list-style-type: none;
+          > a {
+            text-decoration: none;
+            text-transform: uppercase;
+            color: $fbBlue;
+            font-weight: 700;
+            font-family: $iqFontLight;
+            display: block;
+            padding: 5px;
+            font-size: 20px;
+          }
+        }
+      }
+    }
+    input:checked ~ nav { 
+      height: 42%;
+      transition-delay: 0s;
+      border-bottom: 1px #ccc solid;
+      > ul {
+        > li {
+          opacity: 1;
+          transition-delay: .2s;
+        }
+      }
+    } 
 }
