--- a/scss/custom/_main.scss
+++ b/scss/custom/_main.scss
@@ -57,17 +57,29 @@ nav{
 
 
 .rotator{
-  .section{
-    background: #e9e9e9 url("../images/header/header-1.jpg") no-repeat top; 
-    background-size: 100%;
+  width: 100%;
 
-    .container p{
+ .fluxslider, .images, .image1, .image2 img{
+  width: 100% !important;
+  height: 500px !important;
+ }
+
+  .image1, .image2, .image3, .image4, .image5 {
+    background-size: 100% !important;
+    background-repeat: no-repeat !important;
+  }
+
+  h1{
+    position: absolute;
+    z-index: 99999;
+  }
+  p{
       color: $copyDark;
       font-size: 30px;
       padding-top: 36px;
     }
   }
-}
+
 
 .positioning{
   background-color: #607D8B;
